--- a/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/Base.lproj/Main.storyboard
@@ -310,6 +310,9 @@
                             </view>
                             <mapView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="MFk-62-jLh">
                                 <rect key="frame" x="0.0" y="200" width="600" height="400"/>
+                                <connections>
+                                    <outlet property="delegate" destination="gz7-MS-wtk" id="s0p-50-5qk"/>
+                                </connections>
                             </mapView>
                             <view hidden="YES" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="URm-A8-vfG" userLabel="Submit Button Subview">
                                 <rect key="frame" x="0.0" y="500" width="600" height="100"/>
